<resources>
    <string name="app_name">CircuitMessing</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">John Doe</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
    <string name="prefs">preferences</string>
    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="menu_titles">Titles</string>
    <string name="menu_ranking">Ranking</string>
    <string name="menu_forum">Forum</string>
    <string name="menu_settings">Settings</string>
    <string name="menu_sign_out">SIGN OUT</string>
    <string name="menu_introduction">Introduction</string>
    <string name="menu_meet_tools">Meet the tools</string>
    <string name="menu_time_makin">Time to get makin\'</string>
    <string name="menu_summed_up">Summed up</string>
    <string name="menu_quiz">Quiz</string>
    <string name="page_title">CircuitMessing</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="text_input_username">Username</string>
    <string name="text_input_password">Password</string>
    <string name="text_input_repeat_password">Repeat password</string>
    <string name="login_activity_signin_tab_button">Sign in</string>
    <string name="login_activity_signup_tab_button">Sign up</string>
    <string name="username">Username</string>
    <string name="login">Login</string>
    <string name="password">Password</string>
    <string name="repeat_password">Repeat password</string>
    <string name="register">Register</string>
    <string name="home_ringo_title">Ringo build guide</string>
    <string name="home_ringo_description">Assemble your own mobile phone - Ringo!</string>
    <string name="home_maker_title">MAKERbuino build guide</string>
    <string name="home_maker_description">Assemble your own portable gaming console - MAKERbuino!</string>
    <string name="home_nibble_title">Nibble build guide</string>
    <string name="home_nibble_description">Build guide for your brand new gaming console - Nibble!</string>
    <string name="home_card_difficulty">Difficulty: </string>
    <string name="home_difficulty_easy">easy</string>
    <string name="home_difficulty_medium">medium</string>
    <string name="home_difficulty_hard">hard</string>
    <string name="home_card_time">Time: </string>
    <string name="home_ringo_time">5 hours</string>
    <string name="home_maker_time">4 hours 30 minutes</string>
    <string name="home_nibble_time">2 hours</string>
    <string name="title_activity_login">LoginActivity</string>
    <string name="title_activity_product_drawer">ProductDrawer</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="ringo_title">Welcome to Ringo!</string>
    <string name="ringo_chapter1">Welcome to the CircuitMess Ringo build guide! In the following 5 chapters, we’ll help you build your own mobile phone out of the components you received in your Ringo kit!</string>
    <string name="ringo_title2">Recommended age group</string>
    <string name="ringo_chapter2">We believe that an 11-year-old child should be able to assemble a Ringo with some help from an adult. The estimated age group is 11+. The estimated build time is around 5 hours, but it can vary depending on your skill level.CircuitMess Ringo was designed to bring the basics of STEM (Science, Technology, Engineering, and Mathematics) to beginners in a fun and interesting way.</string>
    <string name="ringo_title3">What You’ll Learn With the Ringo</string>
    <string name="ringo_chapter3">Ringo’s main goal is to educate and motivate you to learn something new or brush the skills you already have. In the process of assembly, you’ll learn: how to solder, what are the basic electronic components and what is their function, how can electronic components be connected and why, what are microcontrollers and some basics of digital electronics.</string>
    <string name="nibble_title">Welcome to Nibble!</string>
    <string name="nibble_chapter1">In this build guide, you’ll find out how to assemble a game console all by yourself, using only a couple of tools in the process. Whether this is your first time meeting a do-it-yourself device or you’re a DIY veteran, you will learn a lot!</string>
    <string name="nibble_title2">Recommended age group</string>
    <string name="nibble_chapter2">As it says on the box, you should be at least 9 years old to assemble this console. With that in mind, parts of the assembly like soldering and tightening bolts should be carefully approached - ask an adult to help out if you\'ve never soldered before. The time of the assembly depends on your previous knowledge and experience with electronics. You will need an estimate of 2 hours in total to assemble your console.</string>
    <string name="nibble_title3">What You’ll Learn With the Nibble</string>
    <string name="nibble_chapter3">Nibble’s main goal is to educate and motivate you to learn something new or brush up on the skills you already have. It should also serve as an entry point in electronics, making it the perfect project for starting out your big engineering career. In the process of assembly, you’ll learn: how to solder, what are the basic electronic components and their function, how can electronic components be connected and why, what are microcontrollers and some basics of digital electronics.</string>
    <string name="makerbuino_title">Welcome to MAKERbuino!</string>
    <string name="makerbuino_chapter1">Welcome to the MAKERbuino build guide. In these chapters, we’ll help you make a fully functional retro gaming device out of a bunch of components you’ve received in your MAKERbuino package.</string>
    <string name="makerbuino_title2">Recommended age group</string>
    <string name="makerbuino_chapter2">Our estimation is that an 11-year-old kid should be able to assemble the MAKERbuino with a tiny bit of help from an adult. Therefore, the estimated age group is 11+. Estimated build time: 4 hours 30 minutes. Build time varies and depends on the skills of a user. MAKERbuino was made with the purpose of bringing STEM (Science, Technology, Engineering, and Mathematics) to electronics rookies in a fun and interesting way.</string>
    <string name="makerbuino_title3">What You’ll Learn With the MAKERbuino</string>
    <string name="makerbuino_chapter3">MAKERbuino’s main goal is to educate and motivate you to learn something new or brush the skills you already have.In the process of making the MAKERbuino you’ll learn: how to solder, what are the basic electronic components and what is their function, how can electronic components be connected and why, what are microcontrollers and some basics of digital electronics.</string>
    <string name="dark_mode">Dark mode</string>
    <string name="croatian">Croatian</string>
    <string name="congratulation">Congratulation!</string>
    <string name="you_have_completed_course">You have completed course!</string>
    <string name="your_score_is">Your score is:</string>
    <string name="score_achieved">score_achieved</string>
    <string name="titles_achieved">titles_achieved</string>
    <string name="continue_quiz">Continue</string>
    <string name="mb1">If everything electronics-related is working fine, the last step is to put the guts (electronics) in a nice crystal clear acrylic casing so that everyone can see your perfect soldering joints!</string>
    <string name="mb2">Start by assembling the bottom side of the casing, which consists of two pieces of plastic.</string>
    <string name="mb3">Next up, place the colored button caps to the yellow pushbuttons by simply snapping them on (you will have to apply some force and that is completely normal).</string>
    <string name="mb4">Continue by mounting the front plate and fixating it with black hexagonal M3 spacers and nuts.</string>
    <string name="mb5">Some newer versions of the kit have a hand-strap included.</string>
    <string name="mb6">If your kit has a hand-strap, you can now place it around the bottom right hexagonal M3 spacer.</string>
    <string name="mb7">Now look at you, you\'ve managed to make your own working gaming device out of a bag of tiny electronic components.</string>
    <string name="mb8">Well done, you should be proud of yourself!</string>
    <string name="mb9">That\'s all folks!</string>
    <string name="mb10">MAKERbuino tools</string>
    <string name="mb11">There are some tools and equipment that are required for the assembly and they are not included in the standard kit. If you’ve bought the standard kit (not a kit with tools) and don’t have them, now would be a good time to borrow or purchase them. These tools are useful whenever assembling, fixing or modifying electronic devices and should be the part of every maker’s/hacker’s/modder’s/electrician’s equipment. Many of these are available in a supermarket or in some professional DIY electronics stores like Radio Shack, Adafruit, Sparkfun….</string>
    <string name="mb12">Soldering iron</string>
    <string name="mb13">Any entry-level ‘all-in-one’ soldering iron that you might find at your local hardware store should work (recommended power – something around 30W). It’s a good idea to upgrade to a more expensive soldering station with temperature regulation if you plan to dive into the world of DIY electronics more thoroughly.</string>
    <string name="quiz_question">Quiz question?</string>
    <string name="answer_1">Answer 1</string>
    <string name="answer_2">Answer 2</string>
    <string name="answer_3">Answer 3</string>
    <string name="r1">Summed Up</string>
    <string name="r2">Firstly, if you have received a SIM card with your CircuitMess Ringo kit, take it out and pop it out at the 2nd smallest size (micro SIM).</string>
    <string name="r3">If you didn’t receive a SIM card with your kit, or if you don’t have one that you can use, don’t worry, your Ringo can function just fine without a SIM card (except for calls and messages, duh!).</string>
    <string name="r4">Still, we advise that you should insert a SIM card if you have one before going further.</string>
    <string name="r5">The SIM card slot is located on the left side of the device, and you need to insert it so that the notch on the SIM card faces upwards (check the picture).</string>
    <string name="r6">When inserting it you should hear a click when it sits in the slot.</string>
    <string name="r7">The Micro SIM slot has a push-push mechanism (push when inserting and push when removing).</string>
    <string name="r8">NOTE: SIM can be inserted in multiple ways but it will only work if it’s inserted the right way. After inserting the SIM card, restart the phone so that the SIM module can reload the card.</string>
    <string name="r9">IMPORTANT: Before turning your Ringo on, we recommend charging your phone for at least one hour.</string>
    <string name="r10">The batteries come discharged in order to preserve their chemical composition.</string>
    <string name="r11">After it charged for a while, press the ON button on the bottom right side of the phone.</string>
    <string name="r12">Your Ringo should power on and boot into the Startup wizard.</string>
    <string name="r13">Your Ringo should power on and boot into the Startup wizard.</string>
    <string name="r14">Follow the on-screen instructions of the startup wizard to check if everything works right.</string>
    <string name="r15">In case something is wrong or you have any questions about the assembly process, please feel free to let us know at contact@circuitmess.com.Also, any feedback that you give is extremely useful to us so we can make this guide and the Ringo kit even better.</string>
</resources>