<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_home"
            android:icon="@drawable/ic_baseline_home_24"
            android:title="@string/menu_home" />
        <item
            android:id="@+id/nav_introduction"
            android:title="@string/menu_introduction" />
        <item
            android:id="@+id/nav_meet_tools"
            android:title="@string/menu_meet_tools" />
        <item
            android:id="@+id/nav_time_makin"
            android:title="@string/menu_time_makin" />
        <item
            android:id="@+id/nav_summed_up"
            android:title="@string/menu_summed_up" />
        <item
            android:id="@+id/nav_quiz"
            android:title="@string/menu_quiz" />
    </group>
</menu>