<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:scrollbars="none">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_marginHorizontal="20dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:text="@string/menu_quiz"
            android:textStyle="bold"
            android:textSize="34sp"
            android:layout_gravity="center"/>

        <TextView
            android:id="@+id/question_text"
            android:layout_width="match_parent"
            android:layout_height="225dp"
            android:layout_marginTop="20dp"
            android:layout_marginBottom="50dp"
            android:background="@drawable/round_corners"
            android:backgroundTint="@color/colorPrimaryDark"
            android:gravity="center"
            android:padding="25dp"
            android:text="@string/quiz_question"
            android:textSize="24sp" />

        <Button
            android:id="@+id/answer1"
            android:layout_width="match_parent"
            android:layout_height="75dp"
            android:text="@string/answer_1"
            android:textAllCaps="false"
            android:gravity="center_vertical"
            android:layout_marginBottom="25dp"
            android:background="@drawable/round_corners"/>

        <Button
            android:id="@+id/answer2"
            android:layout_width="match_parent"
            android:layout_height="75dp"
            android:text="@string/answer_2"
            android:textAllCaps="false"
            android:gravity="center_vertical"
            android:layout_marginBottom="25dp"
            android:background="@drawable/round_corners"/>

        <Button
            android:id="@+id/answer3"
            android:layout_width="match_parent"
            android:layout_height="75dp"
            android:text="@string/answer_3"
            android:textAllCaps="false"
            android:gravity="center_vertical"
            android:layout_marginBottom="50dp"
            android:background="@drawable/round_corners"/>
    </LinearLayout>

</ScrollView>