<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/nav_home">

    <fragment
        android:id="@+id/nav_home"
        android:name="com.example.circuitmessing.ui.home.HomeFragment"
        android:label="@string/menu_home"
        tools:layout="@layout/fragment_home" />

    <fragment
        android:id="@+id/nav_gallery"
        android:name="com.example.circuitmessing.ui.gallery.GalleryFragment"
        android:label="@string/menu_gallery"
        tools:layout="@layout/fragment_gallery" />

    <fragment
        android:id="@+id/nav_slideshow"
        android:name="com.example.circuitmessing.ui.slideshow.SlideshowFragment"
        android:label="@string/menu_slideshow"
        tools:layout="@layout/fragment_slideshow" />

    <fragment
        android:id="@+id/fragment_register"
        android:name="com.example.circuitmessing.ui.auth.fragment_register"
        android:label="fragment_register_fragment"
        tools:layout="@layout/fragment_register_fragment" />
    <fragment
        android:id="@+id/fragment_login2"
        android:name="com.example.circuitmessing.ui.auth.fragment_login"
        android:label="fragment_login_fragment"
        tools:layout="@layout/fragment_login_fragment" />

</navigation>